tests/error/type_alias_self.bz
// error: circular dependency encountered while resolving type alias 'T'
// note: required from instantiation of type alias 'T'
type T = T;
